[package]
name = "ditto"
version = "0.1.0"
authors = ["Alex Shapiro <alexander.max.shapiro@gmail.com>"]

[dev-dependencies]
regex = "0.1"
serde_derive = "0.8"

[dependencies]
char_fns = "0.1"
lazy_static = "0.2"
num = "0.1.36"
rand = "0.3"
rustc-serialize = "0.3"
serde = "0.8.13"
serde_json = "0.8.3"
