[package]
name = "ditto"
version = "0.1.0"
authors = ["Alex Shapiro <alexander.max.shapiro@gmail.com>"]

[dev-dependencies]
assert_matches = "1.1"
regex = "0.1"
rmp-serde = "0.13"

[dependencies]
char_fns = "0.1"
lazy_static = "0.2"
num = "0.1"
rand = "0.3"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
