[package]
name = "ditto"
version = "0.1.0"
authors = ["Alex Shapiro <alexander.max.shapiro@gmail.com>"]

[dev-dependencies]
assert_matches = "1.1"
rmp-serde = "0.13"

[dependencies]
base64 = "0.6"
char_fns = "0.1"
either = "1.3"
lazy_static = "0.2"
num = "0.1"
order_statistic_tree = { path = "../order_statistic_tree" }
quickxml_dom = { path = "../quickxml_dom" }
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
