[package]
name = "ditto"
version = "0.1.0"
authors = ["Alex Shapiro <alexander.max.shapiro@gmail.com>"]

[dev-dependencies]
assert_matches = "1.1"
rmp-serde = { git = "ssh://git@github.com/3Hren/msgpack-rust.git" }

[dependencies]
base64 = "0.8"
clippy = { version = "*", optional = true }
lazy_static = "1.0"
num = "0.1"
order_statistic_tree = { path = "../order_statistic_tree" }
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
