[package]
name = "ditto"
version = "0.1.0"
authors = ["Alex Shapiro <alexander.max.shapiro@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A library of commonly-useful CRDTs"
repository = "https://github.com/alex-shapiro/ditto"
documentation = "https://docs.serde.rs/ditto/"
keywords = ["crdt", "ot", "conflict-free", "concurrent", "distributed"]
categories = ["data-structures"]

[dev-dependencies]
assert_matches = "1.1"
rmp-serde = "*"

[dependencies]
base64 = "0.8"
clippy = { version = "*", optional = true }
lazy_static = "1.0"
num = "0.1"
ditto_tree = { path = "../ditto_tree" }
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
